--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
     "prefix":"!",
-    "token":"NTI3NjYwOTc3NzYwNTAxNzYw.DwW-WQ.veL-Nwq6HLrSvKo0MxdrROBEAR8"
+    "token":"NTI3NjYwOTc3NzYwNTAxNzYw.DwYfGw.wVJSVDMV-duIyEulzClUzVp-dFs"
 }
